# learnlog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
base/: CMakeLists.txt  async_msg.cpp  async_msg.h  backtracer.h  block_queue.h  circular_queue.h  exception.h  file_base.h  fmt_base.h  lock_thread_pool.h  lockfree_concurrent_thread_pool.cpp  lockfree_concurrent_thread_pool.h  lockfree_thread_pool.cpp  lockfree_thread_pool.h  log_msg.cpp  log_msg.h  log_msg_buf.cpp  log_msg_buf.h  mpmc_blocking_queue.h  mpmc_queue_lockfree.h  null_mutex.h  os.h  periodic_function.h  registry.cpp  registry.h  static_mutex.h  thread_pool.cpp  thread_pool.h  wchar_support.h
base/concurrentqueue/: blockingconcurrentqueue.h
bench/: CMakeLists.txt  async_queue_bench.cpp  async_thread_pool_bench.cpp
cmake/: utils.cmake  version.h.in
example/: CMakeLists.txt  example.cpp
helloworld/: CMakeLists.txt  helloworld.cpp
include/: async_factory.h  async_logger.h  definitions.h  learnlog.h  learnlog_example.h  logger.h  mylog.h  mylog_example.h  sync_factory.h  win.h
sinks/: CMakeLists.txt  ansicolor_sink.h  basic_file_sink.h  basic_sink.h  null_sink.h  ostream_sink.h  rolling_file_sink.h  sink.h  std_color_sinks.h  std_sinks.h  wincolor_sink.h
sinks/formatters/: filler.h  flag_formatter.h  formatter.h  pattern_formatter.cpp  pattern_formatter.h
src/: learnlog.cpp  learnlog_example.cpp  logger.cpp  mylog.cpp  mylog_example.cpp
tests/: CMakeLists.txt  file_utils.h  test_async_logger.cpp  test_backtracer.cpp  test_block_queue.cpp  test_circular_queue.cpp  test_concurrent_queue.cpp  test_file_base.cpp  test_filler.cpp  test_fmt_base.cpp  test_handle_exception.cpp  test_helloworld.cpp  test_interface.cpp  test_mpmc_queue.cpp  test_pattern_formatter.cpp  test_periodic_function.cpp  test_sink.h  test_sinks.cpp
